force-app/main/default/objects/Sprout_Social_Post__c/fields/ExternalPostId__c.field-meta.xml
<CustomField>
    <fullName>ExternalPostId__c</fullName>
    <externalId>true</externalId>
    <label>External Post Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>