force-app/main/default/objects/Sprout_Social_Post__c/fields/IsOutbound__c.field-meta.xml
<CustomField>
    <fullName>IsOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>