force-app/main/default/objects/Sprout_Social_Post__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Sprout Social Posts</relationshipLabel>
    <relationshipName>Sprout_Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>