force-app/main/default/objects/Sprout_Social_Post__c/fields/PersonaId__c.field-meta.xml
<CustomField>
    <fullName>PersonaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprout Social Persona</label>
    <referenceTo>Sprout_Social_Persona__c</referenceTo>
    <relationshipLabel>Sprout Social Posts</relationshipLabel>
    <relationshipName>Sprout_Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>