force-app/main/default/objects/Sprout_Social_Post__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <label>Posted</label>
    <type>DateTime</type>
</CustomField>