force-app/main/default/objects/Sprout_Social_Post__c/fields/PostTags__c.field-meta.xml
<CustomField>
    <fullName>PostTags__c</fullName>
    <label>Post Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>