force-app/main/default/objects/Sprout_Social_Post__c/fields/R6PostId__c.field-meta.xml
<CustomField>
    <fullName>R6PostId__c</fullName>
    <externalId>true</externalId>
    <label>Post Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>