force-app/main/default/objects/Sprout_Social_Post__c/fields/ResponseContextExternalId__c.field-meta.xml
<CustomField>
    <fullName>ResponseContextExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Response Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>