force-app/main/default/objects/Sprout_Social_Post__c/fields/ReviewedStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewedStatus__c</fullName>
    <label>Reviewed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>Needed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>