force-app/main/default/objects/Sprout_Social_Post__c/fields/ReviewScore__c.field-meta.xml
<CustomField>
    <fullName>ReviewScore__c</fullName>
    <label>Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>