force-app/main/default/objects/Sprout_Social_Post__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <label>Who</label>
    <length>255</length>
    <type>Text</type>
</CustomField>