force-app/main/default/objects/Sprout_Social_Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PersonaId__c</columns>
    <columns>Content__c</columns>
    <columns>Message_Type__c</columns>
    <columns>ReviewedStatus__c</columns>
    <columns>ReviewScore__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>